--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
 
 <body>
 
-    <canvas id="canvas" width="500" height="500"></canvas>
-    <canvas id="graph_canvas" width="500" height="500"></canvas>
+    <canvas id="canvas"></canvas>
 
     <label id="yoko">横の長さ<input type="text" name="yoko" value=5>cm</label>
     <label id="tate">縦の長さ<input type="text" name="tate" value="4">cm</label>
 
     <label id="siten">始点<select id="start_point" name="start_point">
             <option value="A">A</option>
-            <option value="B" selected>B</option>
+            <option value="B">B</option>
             <option value="C">C</option>
             <option value="D">D</option>
         </select></label>
@@ -35,10 +34,15 @@
             <option value="0.5">1㎝/2秒</option>
         </select></label>
 
+    <!--
     <label name="form1">
         <input type="checkbox" name="mawaru" value="right" checked> 時計回り
         <input type="checkbox" name="mawaru" value="left"> 反時計回り
     </label>
+-->
+
+    <canvas id="graph_canvas"></canvas>
+
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js" type="text/javascript"></script>
@@ -62,6 +66,7 @@
         let yoko = 0;
         let dist = 0;
         let r = 1;
+        let s = 10;
 
         let size = document.getElementsByName('size')[0];
 
@@ -71,20 +76,20 @@
         //点P
         let draw = function() {
             P.clearRect(0, 0, 500, 500);
-            P.strokeRect(50, 50, yoko, tate); //点Pが通るところ
+            P.strokeRect(s, s, yoko, tate); //点Pが通るところ
             P.beginPath();
 
             if (sp.value == 'A') {
-                P.arc(x + 50, y + 50, 8, 0, 2 * Math.PI, false);
+                P.arc(x + s, y + s, 5, 0, 2 * Math.PI, false);
 
             } else if (sp.value == 'B') {
-                P.arc(x + yoko + 50, y + 50, 8, 0, 2 * Math.PI, false);
+                P.arc(x + yoko + s, y + s, 5, 0, 2 * Math.PI, false);
 
             } else if (sp.value == 'C') {
-                P.arc(x + yoko + 50, y + tate + 50, 8, 0, 2 * Math.PI, false);
+                P.arc(x + yoko + s, y + tate + s, 5, 0, 2 * Math.PI, false);
 
             } else if (sp.value == 'D') {
-                P.arc(x + 50, y + tate + 50, 8, 0, 2 * Math.PI, false);
+                P.arc(x + s, y + tate + s, 5, 0, 2 * Math.PI, false);
             }
 
             P.fillStyle = 'green';
@@ -97,15 +102,15 @@
             //            P.lineTo(x + 50, y + 50);
             //            P.stroke();
 
-            //頂点のテキスト
-            P.fillStyle = "#000";
-            P.font = "20px cursive";
-            P.fillText("A", 30, 50);
-            P.fillText("B", yoko + 60, 50);
-            P.fillText("C", yoko + 60, tate + 60);
-            P.fillText("D", 30, tate + 60);
-            P.fillText(yoko / r + "cm", yoko / 2 + 30, 40);
-            P.fillText(tate / r + "cm", 5, tate / 2 + 30);
+//            //頂点のテキスト
+//            P.fillStyle = "#000";
+//            P.font = "15px cursive";
+//            P.fillText("A", 0, 0);
+//            P.fillText("B", yoko + 60, 50);
+//            P.fillText("C", yoko + 60, tate + 60);
+//            P.fillText("D", 30, tate + 60);
+//            P.fillText(yoko / r + "cm", yoko / 2 + 30, 40);
+//            P.fillText(tate / r + "cm", 5, tate / 2 + 30);
         }
 
         //表示する
@@ -131,9 +136,9 @@
 
             // 比率を求める
             if (yoko > tate) {
-                r = Math.floor(400 / yoko);
+                r = Math.floor(200 / yoko);
             } else {
-                r = Math.floor(400 / tate);
+                r = Math.floor(200 / tate);
             }
             tate *= r;
             yoko *= r;
@@ -148,7 +153,7 @@
                 dist += (yoko + tate);
             }
         }
-        
+
 
 
         //スタート
