--- a/index.html
+++ b/index.html
@@ -8,55 +8,56 @@
 </head>
 
 <body>
-  <div class="canvas">
-    <canvas id="canvas"></canvas>
-  </div>
+  <div class="container">
+    <div class="canvas">
+      <canvas id="canvas"></canvas>
+    </div>
 
-  <div class="length">
-    <label id="yoko">横の長さ<input type="text" name="yoko" value=5>cm</label>
-    <label id="tate">縦の長さ<input type="text" name="tate" value="4">cm</label>
-  </div>
+    <div class="length">
+      <label id="yoko">横の長さ<input type="text" name="yoko" value=5>cm</label>
+      <label id="tate">縦の長さ<input type="text" name="tate" value="4">cm</label>
+    </div>
 
-  <div class="start_point">
-    <label for="start_point">始点</label>
-    <select id="start_point" name="start_point">
-      <option value="A">A</option>
-      <option value="B">B</option>
-      <option value="C">C</option>
-      <option value="D">D</option>
-    </select>
-  </div>
+    <div class="start_point">
+      <label for="start_point">始点</label>
+      <select id="start_point" name="start_point">
+        <option value="A">A</option>
+        <option value="B">B</option>
+        <option value="C">C</option>
+        <option value="D">D</option>
+      </select>
+    </div>
 
-  <div class="control">
-    <button id="show">表示する</button>
-    <button id="submit">スタート</button>
-    <button id="stop">ストップ</button>
-  </div>
-  <div class="control">
-    <button id="reset">はじめから</button>
-    <button id="clear">数字を消す</button>
-    <button id="gragh">グラフを描画</button>
-  </div>
+    <div class="control">
+      <button id="show">表示する</button>
+      <button id="submit">スタート</button>
+      <button id="stop">ストップ</button>
+    </div>
+    <div class="control">
+      <button id="reset">はじめから</button>
+      <button id="clear">数字を消す</button>
+      <button id="gragh">グラフを描画</button>
+    </div>
 
-  <div class="speed">
-  <label id="sokudo">速度<select id="speed">
-      <option value="1">1㎝/秒</option>
-      <option value="2">2cm/秒</option>
-      <option value="0.5">1㎝/2秒</option>
-    </select></label>
-  </div>
-  
-  <!--
+    <div class="speed">
+      <label id="sokudo">速度<select id="speed">
+          <option value="1">1㎝/秒</option>
+          <option value="2">2cm/秒</option>
+          <option value="0.5">1㎝/2秒</option>
+        </select></label>
+    </div>
+
+    <!--
     <label name="form1">
         <input type="checkbox" name="mawaru" value="right" checked> 時計回り
         <input type="checkbox" name="mawaru" value="left"> 反時計回り
     </label>
 -->
 
-  <div class="g_canvas">
-    <canvas id="graph_canvas"></canvas>
+    <div class="g_canvas">
+      <canvas id="graph_canvas"></canvas>
+    </div>
   </div>
-
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js" type="text/javascript"></script>
 
