--- a/index.html
+++ b/index.html
@@ -14,18 +14,32 @@
     </div>
 
     <div class="length">
-      <label id="yoko">横の長さ<input type="text" name="yoko" value=5>cm</label>
-      <label id="tate">縦の長さ<input type="text" name="tate" value="4">cm</label>
+      <div class="set">
+        <label id="yoko">横の長さ<input type="text" name="yoko" value=5>cm</label>
+      </div>
+      <div class="set">
+        <label id="tate">縦の長さ<input type="text" name="tate" value="4">cm</label>
+      </div>
     </div>
 
-    <div class="start_point">
-      <label for="start_point">始点</label>
-      <select id="start_point" name="start_point">
-        <option value="A">A</option>
-        <option value="B">B</option>
-        <option value="C">C</option>
-        <option value="D">D</option>
-      </select>
+    <div class="setting">
+      <div class="set">
+        <label for="start_point">始点</label>
+        <select id="start_point" name="start_point">
+          <option value="A">A</option>
+          <option value="B">B</option>
+          <option value="C">C</option>
+          <option value="D">D</option>
+        </select>
+      </div>
+      <div class="set">
+        <label for="speed">速度</label>
+        <select id="speed">
+          <option value="1">1㎝/秒</option>
+          <option value="2">2cm/秒</option>
+          <option value="0.5">1㎝/2秒</option>
+        </select>
+      </div>
     </div>
 
     <div class="control">
@@ -39,13 +53,6 @@
       <button id="gragh">グラフを描画</button>
     </div>
 
-    <div class="speed">
-      <label id="sokudo">速度<select id="speed">
-          <option value="1">1㎝/秒</option>
-          <option value="2">2cm/秒</option>
-          <option value="0.5">1㎝/2秒</option>
-        </select></label>
-    </div>
 
     <!--
     <label name="form1">
