ウィンドウサイズに合わせて文字や余白、点Pの大きさなどを自動設定

--- a/index.html
+++ b/index.html
@@ -98,32 +98,31 @@
     let y = 0;
     let tate = 0;
     let yoko = 0;
-    let dist = 0;
-    let r = 1;
-    let padding = 50;
-
+    let dist = 0;  
+    let r = 1;    
+    let padding = canvasWidth * 0.08; // Canvasと四角の間の余白（8%）
+    let p_size = canvasWidth * 0.02; // 点Pのサイズ（2%）  
+    
     let size = document.getElementsByName('size')[0];
-
-
 
 
     //点P
     let draw = function() {
-      P.clearRect(0, 0, 500, 500);
+      P.clearRect(0, 0, canvasWidth, canvasHeight);
       P.strokeRect(padding, padding, yoko, tate); //点Pが通るところ
       P.beginPath();
 
       if (sp.value == 'A') {
-        P.arc(x + padding, y + padding, 5, 0, 2 * Math.PI, false);
+        P.arc(x + padding, y + padding, p_size, 0, 2 * Math.PI, false);
 
       } else if (sp.value == 'B') {
-        P.arc(x + yoko + padding, y + padding, 5, 0, 2 * Math.PI, false);
+        P.arc(x + yoko + padding, y + padding, p_size, 0, 2 * Math.PI, false);
 
       } else if (sp.value == 'C') {
-        P.arc(x + yoko + padding, y + tate + padding, 5, 0, 2 * Math.PI, false);
+        P.arc(x + yoko + padding, y + tate + padding, p_size, 0, 2 * Math.PI, false);
 
       } else if (sp.value == 'D') {
-        P.arc(x + padding, y + tate + padding, 5, 0, 2 * Math.PI, false);
+        P.arc(x + padding, y + tate + padding, p_size, 0, 2 * Math.PI, false);
       }
 
       P.fillStyle = 'green';
@@ -153,13 +152,13 @@
       yoko = document.getElementsByName('yoko')[0].value;
 
       if (yoko > canvasWidth || tate > canvasHeight) {
-        window.alert('横もしくは縦の長さが大きすぎます（' + canvasWidth + '未満で入力してください）');
+        window.alert('長さは' + canvasWidth + '未満の整数で入力してください）');
         document.getElementsByName('tate')[0].value = '';
         document.getElementsByName('yoko')[0].value = '';
         return;
       }
       if (yoko < 1.0 || tate < 1.0) {
-        window.alert('横もしくは縦の長さが短すぎます（1.0以上で入力してください）');
+        window.alert('長さは1.0以上の整数で入力してください）');
         document.getElementsByName('tate')[0].value = '';
         document.getElementsByName('yoko')[0].value = '';
         return;
@@ -201,8 +200,8 @@
         return;
       }
       let extracted1 = function() {
-        P.clearRect(0, 0, 500, 500);
-        P.strokeRect(50, 50, yoko + 50, tate + 50); //点Pが通るところ
+        P.clearRect(0, 0, canvasWidth, canvasHeight);
+        P.strokeRect(padding, padding, yoko + padding, tate + padding); //点Pが通るところ
         draw();
 
         if (dist % r == 0) {
@@ -210,8 +209,6 @@
           lineChartData.datasets[0].data.push(yoko * y / 2 / r / r);
         }
 
-
-
         console.log(dist);
 
         if (dist < yoko) {
@@ -226,23 +223,7 @@
           clearInterval(animid);
         }
 
-        console.log("x=" + x + " y=" + y + " dist=" + dist + " yoko=" + yoko + " tate=" + tate);
-
-
-        console.log(dist);
-
-        if (dist < yoko) {
-          x += 1;
-        } else if (dist < yoko + tate) {
-          y += 1;
-        } else if (dist < yoko * 2 + tate) {
-          x -= 1;
-        } else if (dist < yoko * 2 + tate * 2) {
-          y -= 1;
-        } else {
-          clearInterval(animid);
-        }
-
+        console.log("distance: " + dist);
         console.log("x=" + x + " y=" + y + " dist=" + dist + " yoko=" + yoko + " tate=" + tate);
 
         dist += 1;
@@ -265,8 +246,8 @@
       x = 0;
       y = 0;
       dist = 0;
-      P.clearRect(0, 0, 800, 400);
-      P.strokeRect(50, 50, yoko, tate); //点Pが通るところ
+      P.clearRect(0, 0, canvasWidth, canvasHeight);
+      P.strokeRect(padding, padding, yoko, tate); //点Pが通るところ
       lineChartData.datasets[0].data = [];
       lineChartData.labels = [];
       draw();
