プルダウンメニュー大きさ編集

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                     clearInterval(animid);
                 }
 
-                console.log("vel: " + vel);
+//                console.log("vel: " + vel);
                 console.log("x=" + x + " y=" + y + " dist=" + dist + " yoko=" + yoko + " tate=" + tate)
 
                 dist += vel;
